add link to github repository

--- a/src/Shared/MainLayout.razor
+++ b/src/Shared/MainLayout.razor
@@ -2,7 +2,9 @@
 
 <div class="main">
     <div class="top-row px-4">
-        <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
+        <a href="http://github.com/kogelnikp/blazor-rock-paper-scissors/" target="_blank" class="ml-md-auto">
+            <img src="/images/github.png" class="github-logo" alt="GitHub logo"/>
+        </a>
     </div>
 
     <div class="content px-4">
